client/src/styles/pages/_profil.scss
body {
  background-image: url('https://i.postimg.cc/Y2b0K5x2/background4.png');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  margin: 0;
  background-attachment: fixed;
}

.profil-page {
  margin: 70px auto 0;
  max-width: 1200px;

  .icons {
    top: 55px;
  }

  .log-container {
    margin: 0 auto 0 100px;
    display: grid;
    grid-template-columns: 60% 40%;
  
    @media screen and (max-width: 885px) {
      grid-template-columns: 1fr;
      margin: 0 auto;
    }
  }
  

  .connection-form {
    border: none;
    background: $color-4;
    min-width: 490px;
    width: 90%;
    text-align: center;
    margin: 0 auto;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 
      -5px 5px 10px 0px rgba(0, 0, 0, 0.123),
      2px 2px 10px -2px rgba(0, 0, 0, 0.123);

    @media screen and (max-width: 550px) {
      min-width: 200px;
    }

    @media screen and (min-width: 1281px) {
      margin-top: -40px;
      
    }

    @media screen and (max-width: 850px) {
      margin-bottom: 100px;
      margin-top: -50px;
    }
    

    .form-container {
      display: grid;
      grid-template-columns: 30% 70%;

      @media screen and (max-width: 550px) {
        grid-template-columns: 1fr;
      }

      ul {
        li {
          cursor: pointer;
          border-radius: 18px;
          padding: 10px 20px;
          transition: 0.2s;

          @media screen and (max-width: 550px) {
            width: 80%;
            margin: 0 auto;
            display: inline-block;
            width: auto;
            margin: 0 10px;
          }
        }
        .active-btn {
          background: $color-1;

          &:hover {
            background: $color-2;
          }
        }
        li:not(.active-btn) {
          &:hover {
            transform: translateX(3px);
          }
        }
        #login {
          position: relative;
          @media screen and (max-width: 550px) {
            margin-bottom: 30px;
          }
        }
      }
      form {
        input {
          padding: 14px 20px;
          margin: 0;
          font-size: 0.9rem;
          font-family: $font-2;
          border-radius: 20px;

          &:focus {
            box-shadow: 0 0 3px rgba(51, 51, 51, 0.2);
          }
        }
        input[type="submit"] {
          color: black;
        }
        a {
          color: rgb(62, 62, 214);
        }
      }
    }
  }
  h1 {
    text-align: center;
    margin: 10px 0 6px;
  }
  .img-container {
    display: grid;
    align-items: center;
    position: fixed;
    top: 50vh;
    left: 68.67vw;
    transform: translate(-40%, -50%);
  
    img {
      height: 400px;
      
      @media screen and (max-width: 1050px) {
        height: 350px;
      }
      @media screen and (max-width: 950px) {
        height: 300px;
      }
      @media screen and (max-width: 885px) {
        display: none;
      }
    }
  }
  
  .update-container {
    display: grid;
    grid-template-columns: 50% 50%;

    @media screen and (max-width: 700px) {
      grid-template-columns: 1fr;
    }

    > div {
      background: $color-4;
      border-radius: 10px;
      padding: 25px;
      margin: 20px 10px;

      @media screen and (max-width: 700px) {
        margin: 10px 10px;
      }
    }
    .left-part {
      text-align: center;

      h3 {
        margin-bottom: 12px;
      }

      img {
        height: 180px;
        width: 180px;
        border-radius: 46px;
        object-fit: cover;
        margin-bottom: 30px;
        box-shadow: 0 0 6px rgba(51, 51, 51, 0.363);
      }
      form {
        position: relative;

        label {
          position: absolute;
          transform: translate(-50%, -50%);
          width: 270px;
          background: $color-3;
          color: $color-2;
          border-radius: 10px;
          display: inline-block;
          padding: 9px 0;
          transition: 0.2s;
          z-index: 10;
          cursor: pointer;
        }
        input[type="file"] {
          position: absolute;
          opacity: 1;
          transform: translate(-3px, -50%);
          cursor: pointer;
          padding: 10px 20px;

          @media screen and (max-width: 1121px) {
            opacity: 0;
          }
        }
        input[type="submit"] {
          margin-top: 10px;
          border-radius: 10px;

          &:hover {
            letter-spacing: 1px;
          }
        }
      }
      p {
        color: red;
        font-family: $font-3;
        margin-top: 6px;
      }
    }
    .right-part {
      text-align: center;
      padding: 20px 40px;
      h3 {
        margin-bottom: 12px;
      }
      p,
      textarea {
        min-height: 80px;
        border: 1px solid $color-1;
        border-radius: 10px;
        padding: 10px 20px;
        font-size: 0.9rem;
      }
      textarea {
        width: 100%;
        margin-bottom: -6px;
        font-size: 0.9rem;
      }
      button {
        margin: 5px 0;
        float: right;
      }
      h4 {
        margin: 60px 0 10px;
      }
      h5 {
        background: $color-1;
        color: $color-4;
        font-family: $font-1;
        margin: 20px 0;
        padding: 12px;
        font-size: 0.9rem;
        border-radius: 10px;
        transition: 0.2s;
        cursor: pointer;

        &:hover {
          filter: brightness(110%);
          transform: translateX(2px);
        }
      }
    }
  }
  .popup-profil-container {
    z-index: 100;
    width: 100%;
    top: 0;
    left: 0;
    height: 100%;
    position: fixed;
    animation: popup 1s forwards;

    @keyframes popup {
      to {
        backdrop-filter: blur(2px);
      }
    }

    .modal {
      position: absolute;
      top: 10%;
      left: 50%;
      transform: translate(-50%);
      background: $color-2;
      padding: 25px;
      border-radius: 10px;
      box-shadow: 0 0 2px rgba(131, 130, 130, 0.356);
      overflow: hidden; /* initial state */
      transform: scaleY(0);
      transform-origin: center;
      animation: modal .5s forwards;
    
      // Limitation de la hauteur et ajout du scroll si nécessaire
      max-height: 80vh; /* 80% de la hauteur de la fenêtre */
      overflow-y: auto; /* Ajoute la barre de scroll verticale si nécessaire */

      // Personnalisation de la barre de scroll
  &::-webkit-scrollbar {
    width: 10px;
  }

  &::-webkit-scrollbar-track {
    background: #f1f1f1; /* Couleur de fond de la barre */
    border-radius: 10px;
  }

  &::-webkit-scrollbar-thumb {
    background: #7f7f7f; /* Couleur de la poignée */
    border-radius: 10px; /* Bord arrondi pour un effet plus doux */
    border: 2px solid $color-2; /* Ajoute un peu de bord pour l'effet 3D */
  }

  &::-webkit-scrollbar-thumb:hover {
    background: darken($color-1, 10%); /* Changement de couleur au hover */
  }
    
      h3 {
        min-width: 200px;
      }
    
      .cross {
        position: absolute;
        top: 25px;
        right: 25px;
        transition: 0.1s;
        cursor: pointer;
    
        &:hover {
          transform: scale(1.07);
        }
      }
    
      // Styles pour le contenu de la modal (le texte)
      p {
        margin: 15px 0;
        line-height: 1.5;
      }
    
      @keyframes modal {
        to {
          transform: scale(1) translate(-50%);
        }
      }

      @media screen and (max-width: 600px) {
        width: 90%; /* La modal prend 90% de la largeur de l'écran */
        left: 50%;
        transform: translate(-50%);
      }

      .cross {
        position: absolute;
        top: 25px;
        right: 25px;
        transition: 0.1s;
        cursor: pointer;

        &:hover {
          transform: scale(1.07);
        }
      }

      ul {
        margin: 20px 0 0;
        max-height: 500px;
        overflow-y: scroll;
        overflow-x: hidden;

        &::-webkit-scrollbar {
          width: 2px;
        }
        &::-webkit-scrollbar-track {
          background: $color-4;
        }
        &::-webkit-scrollbar-thumb {
          background: $color-1;
        }
        &::-webkit-scrollbar-thumb:hover {
          background: #555;
        }

        li {
          display: grid;
          grid-template-columns: 64px 1fr 114px;
          align-items: center;
          margin: 10px 0;

          img {
            height: 50px;
            width: 50px;
            border-radius: 20px;
            object-fit: cover;
            box-shadow: 0 0 2px rgba(51, 51, 51, 0.376);
          }
          h4 {
            text-align: left;
            min-width: 210px;
          }
          .follow-handler {
            text-align: left;

            button {
              background: $color-4;
              border-radius: 10px;
              margin-right: 6px;

              &:hover {
                color: $color-3;
                transform: translateX(2px);
              }
            }
          }
        }
      }
    }
  }
}

